--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,59 @@
   --Dark-blue-line: hsl(215, 32%, 27%);
   --White: hsl(0, 0%, 100%);
   font-size: clamp(1rem, 0.75rem + 1.5vw, 2rem);
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Outfit', sans-serif;
+  font-weight: 300;
 }
 
 body {
   background-color: var(--Dark-blue-main);
+}
+
+.card-container {
+  border: 2px solid red;
+  padding: 1.25rem;
+  border-radius: 25px;
+}
+
+.card-styles {
+  background-color: var(--Dark-blue-card);
+}
+
+img {
+  max-inline-size: 100%;
+  block-size: auto;
+  border-radius: 25px;
+}
+
+.id-number {
+  color: var(--White);
+  font-size: 18px;
+  font-weight: 600;
+  padding-top: 1rem;
+}
+
+.text-color {
+  color: var(--Soft-blue);
+}
+
+.price-time-left {
+  padding-block-end: .5rem;
+}
+
+.funny-money {
+  color: var(--Cyan);
+  font-weight: 400;
+}
+
+.time {
+  text-align: right;
+}
+
+.user {
+  border-top: 2px solid var(--Dark-blue-line);
+  padding-block-start: .5rem;
+}
+
+.user-name {
+  color: var(--White);
 }
