--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,29 @@
   --Dark-blue-card: hsl(216, 50%, 16%);
   --Dark-blue-line: hsl(215, 32%, 27%);
   --White: hsl(0, 0%, 100%);
-  font-size: clamp(1rem, 0.75rem + 1.5vw, 2rem);
+  font-size: 16px;
   font-family: 'Outfit', sans-serif;
   font-weight: 300;
 }
 
 body {
   background-color: var(--Dark-blue-main);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 1px);
 }
 
 .card-container {
-  border: 2px solid red;
   padding: 1.25rem;
   border-radius: 25px;
+  margin: 1.25rem;
+  width: 314px;
+  box-shadow: 0px 5px 15px 10px hsla(235, 61%, 8%, 0.507);
 }
+
+
 
 .card-styles {
   background-color: var(--Dark-blue-card);
@@ -33,6 +42,13 @@ img {
   max-inline-size: 100%;
   block-size: auto;
   border-radius: 25px;
+}
+
+.user-avatar {
+  width: 28px;
+  border: 1px solid var(--White);
+  border-radius: 50%;
+  margin-inline-end: .75rem;
 }
 
 .id-number {
@@ -48,6 +64,8 @@ img {
 
 .price-time-left {
   padding-block-end: .5rem;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
 }
 
 .funny-money {
@@ -62,8 +80,18 @@ img {
 .user {
   border-top: 2px solid var(--Dark-blue-line);
   padding-block-start: .5rem;
+  vertical-align: text-top;
 }
 
 .user-name {
+  color: var(--White);
+}
+
+.attribution {
+  margin-block-start: 1rem;
+  color: var(--Soft-blue);
+}
+
+.attribution a {
   color: var(--White);
 }
