--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body {
   align-items: center;
   justify-content: center;
   height: calc(100vh - 1px);
+  margin: 0;
+  padding: 0;
 }
 
 .card-container {
@@ -137,4 +139,9 @@ img {
 
 .attribution a {
   color: var(--White);
+  text-decoration: none;
+}
+
+.attribution a:hover {
+  color: var(--Cyan);
 }
